(executable
 (public_name landlock)
 (libraries cmdliner)
 (foreign_stubs
  (language c)
  (names landlock_stubs))
 (ctypes
  (external_library_name none)
  (headers (include linux/landlock.h))
  (build_flags_resolver vendored)
  (type_description
   (functor bindings)
   (instance types))
  (generated_entry_point c)))

(cram
 (deps %{bin:landlock}))
