(library
 (public_name landlock)
 (libraries unix)
 (ctypes
  (external_library_name none)
  (headers
   (preamble
    "#define _GNU_SOURCE\n#include <linux/landlock.h>\n#include <unistd.h>\n#include <sys/syscall.h>\n#include<sys/prctl.h>\n#include <sys/fcntl.h>"))
  (build_flags_resolver vendored)
  (type_description
   (functor bindings)
   (instance types))
  (function_description
   (functor bindings)
   (instance functions))
  (generated_entry_point c)))
